--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
     font-weight: 300;
     color: #555;
     line-height: 1.5;
@@ -28,7 +29,7 @@ h1 {
     font-weight: 300;
 }
 
-h3 {
+h2 {
     font-weight: 400;
     margin-bottom: 50px;
 }
