Fix typo and set width to be 960px

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ text {
 
 main,
 footer {
-    width: 60vw;
-    min-width: 800px;
+    /*width: 60vw;*/
+    width: 960px;
     margin: 0 auto;
 }
 
