--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,11 @@ h4 {
 
 p.intro {
     max-width: 800px;
+    margin: 1.7rem 0;
 }
 
 .subtitle {
-    margin-top: 0.3em;
+    margin-top: 0.5em;
     max-width: 800px;
 }
 
